bump to java8, removed guava